# library-project

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  error.py  file.py  forms.py  functions.py  google_books_1299.csv  index.py  library.py  main.py  processing.py  pyproject.toml  requirements.txt  storage.py  test_file.py  test_index.py  test_library.py  test_main.py  test_storage.py  test_storage_import.py  test_validator.py  validator.py
.github/workflows/: py.yaml  py_integration.yaml
next/: __init__.py  db.py  schema.sql
next/static/: style.css
next/templates/: enter.html
static/js/: cart.js  order.js
templates/: _formhelpers.html  _formhelpers_bootstrap.html  admin_dashboard.html  blank.html  book.html  book_edit.html  book_new.html  book_order.html  cart.html  cart_order.html  enter.html  import.html  index.html  order.html  order_confirm.html  profile.html  readcookie.html  search_results.html  settings.html
tests/: conftest.py  data.sql  test_db.py  test_factory.py
